--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "expo-sqlite": "~14.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
