--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.1",
+    "@react-native-firebase/app": "^21.0.0",
+    "@react-native-firebase/auth": "^21.0.0",
     "expo": "~50.0.17",
     "expo-image": "^1.13.0",
     "expo-status-bar": "~1.11.1",
+    "firebase": "^10.14.0",
     "formik": "^2.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
