--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-picker-select": "^9.3.1",
     "react-native-web": "~0.19.6",
     "react-router-native": "^6.26.2",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "@react-native-async-storage/async-storage": "1.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
