--- a/package.json
+++ b/package.json
@@ -4,25 +4,26 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "server": "json-server -p3001 --watch db.json"
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.1.1",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "axios": "^1.7.7",
-    "expo": "~50.0.17",
+    "expo": "^50.0.0",
     "expo-status-bar": "~1.11.1",
     "formik": "^2.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
     "react-native-picker-select": "^9.3.1",
+    "react-native-vision-camera": "^4.5.3",
     "react-native-web": "~0.19.6",
     "react-router-native": "^6.26.2",
-    "yup": "^1.4.0",
-    "@react-native-async-storage/async-storage": "1.21.0"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
