--- a/package.json
+++ b/package.json
@@ -10,20 +10,23 @@
     "server": "json-server -p3001 --watch db.json"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.1.1",
-    "@react-native-async-storage/async-storage": "1.21.0",
+    "@expo/metro-runtime": "~3.2.3",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "axios": "^1.7.7",
-    "expo": "^50.0.0",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.37",
+    "expo-camera": "~15.0.16",
+    "expo-status-bar": "~1.12.1",
     "formik": "^2.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.5",
     "react-native-picker-select": "^9.3.1",
     "react-native-vision-camera": "^4.5.3",
     "react-native-web": "~0.19.6",
     "react-router-native": "^6.26.2",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "expo-image-picker": "~15.0.7",
+    "expo-image": "~1.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
